# esp32_SHC

./: CMakeLists.txt  README.md  README_CN.md  idf_ext.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
boards/esp_SensairShuttle/: Kconfig  setup_device.c
common_components/brookesia_app_compass/: CMakeLists.txt  compass_wrapper.cpp  compass_wrapper.hpp  esp_brookesia_app_compass.cpp  esp_brookesia_app_compass.hpp  idf_component.yml
common_components/brookesia_app_compass/BMM350_SensorAPI/: CMakeLists.txt  bmm350.c  bmm350_aux_adapter.c  bmm350_aux_adapter.h  bmm350_oor.c  bmm350_oor.h
common_components/brookesia_app_compass/BMM350_SensorAPI/examples/: README.md
common_components/brookesia_app_compass/BMM350_SensorAPI/examples/common/: common.c  common.h
common_components/brookesia_app_compass/assets/: img_app_compass.c
common_components/brookesia_app_compass/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
common_components/brookesia_app_compass/ui/images/: ui_img_compass_base_png.c  ui_img_compass_pointer_png.c  ui_img_correct_screen_png.c
common_components/brookesia_app_compass/ui/screens/: ui_CompassCorrectScreen.c  ui_CompassCorrectScreen.h  ui_CompassScreen.c  ui_CompassScreen.h  ui_CompassTipScreen.c  ui_CompassTipScreen.h
common_components/brookesia_app_gesture_detect/: CMakeLists.txt  esp_brookesia_app_gesture_detect.cpp  esp_brookesia_app_gesture_detect.hpp  idf_component.yml
common_components/brookesia_app_gesture_detect/assets/: img_app_gesture_detect.c
common_components/brookesia_app_gesture_detect/ui/: CMakeLists.txt  gesture_detect_ui_helpers.c  gesture_detect_ui_helpers.h  ui.c  ui.h  ui_app.c  ui_app.h  ui_events.c  ui_events.h
common_components/brookesia_app_gesture_detect/ui/images/: ui_img_pickup_png.c  ui_img_shake_png.c  ui_img_success_png.c  ui_img_throw_png.c
common_components/brookesia_app_gesture_detect/ui/screens/: ui_GestureDetectScreen.c  ui_GestureDetectScreen.h  ui_GestureDetectTipScreen.c  ui_GestureDetectTipScreen.h
common_components/brookesia_app_temperature/: CMakeLists.txt  esp_brookesia_app_temperature.cpp  esp_brookesia_app_temperature.hpp  idf_component.yml
common_components/brookesia_app_temperature/BME690_SensorAPI/: CMakeLists.txt  bme69x.c
common_components/brookesia_app_temperature/BME690_SensorAPI/examples/common/: common.c  common.h
common_components/brookesia_app_temperature/assets/: img_app_temperature.c
common_components/brookesia_app_temperature/bsec_IAQ/config/bme680/bme680_iaq_18v_300s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme680/bme680_iaq_18v_300s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme680/bme680_iaq_18v_3s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme680/bme680_iaq_18v_3s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme680/bme680_iaq_33v_300s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme680/bme680_iaq_33v_300s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme680/bme680_iaq_33v_3s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme680/bme680_iaq_33v_3s_4d/: bsec_iaq.c
common_components/brookesia_app_temperature/bsec_IAQ/config/bme688/bme688_iaq_18v_300s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme688/bme688_iaq_18v_300s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme688/bme688_iaq_18v_3s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme688/bme688_iaq_18v_3s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme688/bme688_iaq_33v_300s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme688/bme688_iaq_33v_300s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/config/bme688/bme688_iaq_33v_3s_28d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv  bsec_iaq.h
common_components/brookesia_app_temperature/bsec_IAQ/config/bme688/bme688_iaq_33v_3s_4d/: bsec_iaq.c  bsec_iaq.config  bsec_iaq.csv
common_components/brookesia_app_temperature/bsec_IAQ/inc/: bsec_datatypes.h  bsec_interface.h  bsec_interface_multi.h
common_components/brookesia_app_temperature/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
common_components/brookesia_app_temperature/ui/images/: ui_img_fire_png.c  ui_img_leaf_png.c  ui_img_pressure_png.c  ui_img_temp_png.c  ui_img_water_png.c
common_components/brookesia_app_temperature/ui/screens/: ui_TemperatureScreen.c  ui_TemperatureScreen.h  ui_TemperatureTipScreen.c  ui_TemperatureTipScreen.h
common_components/brookesia_system_phone/: CMakeLists.txt  Kconfig  idf_component.yml
common_components/brookesia_system_phone/include/brookesia/: system_phone.hpp
common_components/brookesia_system_phone/include/brookesia/system_phone/: app.hpp  display.hpp  macro_configs.h  manager.hpp  phone.hpp
common_components/brookesia_system_phone/include/brookesia/system_phone/assets/: assets.h
common_components/brookesia_system_phone/src/: app.cpp  display.cpp  manager.cpp  phone.cpp
common_components/brookesia_system_phone/src/private/: utils.hpp
common_components/brookesia_system_phone/src/widgets/: app_launcher.cpp  app_launcher_icon.cpp  gesture.cpp  navigation_bar.cpp  recents_screen.cpp  recents_screen_snapshot.cpp  status_bar.cpp  status_bar_icon.cpp
main/: CMakeLists.txt  audio_control_app.cpp  audio_control_app.hpp  audio_self_test.cpp  audio_self_test.hpp  check_custom_audio.py  display.cpp  display.hpp  idf_component.yml  main.cpp
(+120 files in other folders)
