set(COMPONENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(COMPONENT_SRC_DIR ${COMPONENT_DIR}/src)
set(COMPONENT_INCLUDE_DIRS ${COMPONENT_DIR}/include)
set(COMPONENT_PRIVATE_INCLUDE_DIRS ${COMPONENT_SRC_DIR})
set(COMPONENT_SRCS_C "")
set(COMPONENT_SRCS_CPP "")
set(COMPONENT_SRCS_C_COMPILE_FLAGS "")
set(COMPONENT_SRCS_CPP_COMPILE_FLAGS "-Wno-missing-field-initializers")
set(COMPONENT_SRCS_COMPILE_OPTIONS "")

#
# Assets
#
set(ASSETS_SRC_DIR ${COMPONENT_SRC_DIR}/assets)
file(GLOB_RECURSE ASSETS_SRCS_C ${ASSETS_SRC_DIR}/*.c)
file(GLOB_RECURSE ASSETS_SRCS_CPP ${ASSETS_SRC_DIR}/*.cpp)
list(APPEND COMPONENT_SRCS_C ${ASSETS_SRCS_C})
list(APPEND COMPONENT_SRCS_CPP ${ASSETS_SRCS_CPP})
list(APPEND COMPONENT_SRCS_COMPILE_OPTIONS "-DLV_LVGL_H_INCLUDE_SIMPLE")

#
# Widgets
#
set(WIDGETS_SRC_DIR ${COMPONENT_SRC_DIR}/widgets)
file(GLOB_RECURSE WIDGETS_SRCS_C ${WIDGETS_SRC_DIR}/*.c)
file(GLOB_RECURSE WIDGETS_SRCS_CPP ${WIDGETS_SRC_DIR}/*.cpp)
list(APPEND COMPONENT_SRCS_C ${WIDGETS_SRCS_C})
list(APPEND COMPONENT_SRCS_CPP ${WIDGETS_SRCS_CPP})

#
# Phone
#
set(PHONE_SRC_DIR ${COMPONENT_SRC_DIR})
file(GLOB PHONE_SRCS_C ${PHONE_SRC_DIR}/*.c)
file(GLOB PHONE_SRCS_CPP ${PHONE_SRC_DIR}/*.cpp)
list(APPEND COMPONENT_SRCS_C ${PHONE_SRCS_C})
list(APPEND COMPONENT_SRCS_CPP ${PHONE_SRCS_CPP})

#
# Register Component
#
idf_component_register(
    SRCS ${COMPONENT_SRCS_C} ${COMPONENT_SRCS_CPP}
    INCLUDE_DIRS ${COMPONENT_INCLUDE_DIRS}
    PRIV_INCLUDE_DIRS ${COMPONENT_PRIVATE_INCLUDE_DIRS}
)

include(package_manager)
cu_pkg_define_version(${CMAKE_CURRENT_LIST_DIR})

#
# Compile Options
#
target_compile_options(${COMPONENT_LIB}
    PUBLIC
        ${COMPONENT_SRCS_COMPILE_OPTIONS}
)
set_source_files_properties(${COMPONENT_SRCS_C}
    PROPERTIES
        COMPILE_FLAGS "${COMPONENT_SRCS_C_COMPILE_FLAGS}"
)
set_source_files_properties(${COMPONENT_SRCS_CPP}
    PROPERTIES
        COMPILE_FLAGS "${COMPONENT_SRCS_CPP_COMPILE_FLAGS}"
)
